traefik-gateway/traefik-middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: large-upload-limit
spec:
  buffering:
    maxRequestBodyBytes: 3040870400 # 2900MiB
